<resources>
    <string name="app_name"></string>
    <string name="login_twitter">Log in with Twitter</string>
    <string name="compose">Compose</string>
    <string name="droid_user">Droid User</string>
    <string name="sample_tweet_text">Tweets can ony be 140 characters long...</string>
    <string name="twitter_user">\@droidgeddon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet_compose_hint">Hello! What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="max_tweet_length">140</string>
    <string name="following">Following</string>
    <string name="followers">followers</string>
    <string name="user_description">Traveler and student for life.</string>
    <string name="following_count">1000</string>
    <string name="followers_count">2000</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <string name="tweets_tab_text">TWEETS</string>
    <string name="tweets_and_replies_tab_text"><![CDATA[TWEETS & REPLIES]]></string>
    <string name="media_tab_text">MEDIA</string>
    <string name="likes_tab_text">LIKES</string>
    <string name="user_profile">User Profile</string>
</resources>
