<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/flUserProfileBackdrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_profile_backdrop_frame">

        <com.fetherz.saim.twitterredux.utils.DynamicHeightImageView
            android:id="@+id/ivBackDrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_profile_backdrop_height"
            android:fitsSystemWindows="true"
            tools:src="@drawable/twitter_backdrop_image"
            android:scaleType="centerCrop" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvUserProfilePicture"
            android:layout_width="@dimen/profile_image_width_small"
            android:layout_height="@dimen/profile_image_height_small"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="@dimen/ic_margin_large"
            app:cardCornerRadius="@dimen/card_radius">

            <com.fetherz.saim.twitterredux.utils.DynamicHeightImageView
                android:id="@+id/ivUserProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/ic_photo"/>

        </android.support.v7.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flUserProfileBackdrop"
        android:layout_marginLeft="@dimen/text_margin_medium"
        android:layout_marginTop="@dimen/text_margin_medium"
        android:textColor="@android:color/black"
        tools:text="@string/droid_user"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivVerified"
        android:layout_width="@dimen/ic_small"
        android:layout_height="@dimen/ic_small"
        android:src="@drawable/ic_verified"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_marginLeft="@dimen/ic_margin_small"
        android:layout_alignBottom="@+id/tvUserName"
        tools:src="@drawable/ic_verified"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvUserName"
        tools:text="@string/twitter_user"
        android:layout_marginLeft="@dimen/text_margin_medium"/>

    <TextView
        android:id="@+id/tvUserDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvUserScreenName"
        android:layout_marginLeft="@dimen/text_margin_medium"
        android:layout_marginRight="@dimen/text_margin_medium"
        android:layout_marginBottom="@dimen/text_margin_small"
        android:layout_marginTop="@dimen/text_margin_small"
        tools:text="@string/user_description"/>

    <TextView
        android:id="@+id/tvFollowingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvUserDescription"
        android:layout_marginLeft="@dimen/text_margin_medium"
        android:layout_marginTop="@dimen/text_margin_small"
        android:layout_marginRight="@dimen/text_margin_small"
        android:layout_marginBottom="@dimen/text_margin_small"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        tools:text="@string/following_count"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvfollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserDescription"
        android:layout_margin="@dimen/text_margin_small"
        android:layout_toEndOf="@+id/tvFollowingCount"
        android:layout_toRightOf="@+id/tvFollowingCount"
        android:text="@string/following"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/tvFollowersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserDescription"
        android:layout_marginBottom="@dimen/text_margin_small"
        android:layout_marginLeft="@dimen/text_margin_large"
        android:layout_marginRight="@dimen/text_margin_small"
        android:layout_marginTop="@dimen/text_margin_small"
        android:layout_toEndOf="@+id/tvfollowing"
        android:layout_toRightOf="@+id/tvfollowing"
        android:textColor="@android:color/black"
        tools:text="@string/followers_count"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserDescription"
        android:layout_margin="@dimen/text_margin_small"
        android:layout_toEndOf="@+id/tvFollowersCount"
        android:layout_toRightOf="@+id/tvFollowersCount"
        android:text="@string/followers"
        android:textAllCaps="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditProfile"
        android:text="@string/edit_profile"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginRight="@dimen/text_margin_large"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_edit_profile"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvUserName"
        android:layout_above="@+id/tvUserDescription" />

</RelativeLayout>