<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

   <ImageView
       android:layout_width="@dimen/ic_medium"
       android:layout_height="@dimen/ic_medium"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:layout_margin="@dimen/text_margin_small"
       android:src="@drawable/ic_close"
       android:id="@+id/ivClose" />

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/profile_image_width_small"
        android:layout_height="@dimen/profile_image_height_small"
        android:id="@+id/cvComposeProfilePicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="@dimen/card_radius">

        <com.fetherz.saim.twitterredux.utils.DynamicHeightImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ivComposeUserProfilePicture"/>

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/vSeparator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cvComposeProfilePicture"
        android:layout_marginTop="@dimen/text_margin_large"
        android:background="@color/colorTransparent"
        android:gravity="top"
        android:hint="@string/tweet_compose_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/vSeparator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/text_margin_large"
            android:foregroundGravity="bottom"
            android:id="@+id/ivCamera"
            android:src="@drawable/ic_camera"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivCamera"
            android:layout_alignBottom="@id/ivCamera"
            android:layout_marginLeft="@dimen/text_margin_large"
            android:foregroundGravity="bottom"
            android:id="@+id/ivLocation"
            android:src="@drawable/ic_location"/>

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/text_margin_small"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/tweet"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvTweetLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/text_margin_small"
            android:layout_toLeftOf="@+id/btnTweet"
            android:layout_toStartOf="@+id/btnTweet"
            android:text="@string/max_tweet_length"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</RelativeLayout>
